--- a/columbianissan/inventory.html
+++ b/columbianissan/inventory.html
@@ -100,10 +100,240 @@
 		<article id="content-primary-inventory" class="content-primary">
 			<div class="container">
 				<div class="container-wrapper">
-					
+					<div class="row inv-intro">
+						<div class="col-sm-6 inv-intro-all">
+							<h1>All-vehicles In Columbia SC 29223!</h1>
+						</div>
+						<div class="col-sm-6 inv-intro-found">
+							<p>Found 388 Vehicles</p>
+						</div>
+					</div>
+					<div class="page-sorting">
+		                Sort By: 
+		                |<a href="/allvehicles-sort-new_used-desc"> New or Used</a>
+		                |<a href="/allvehicles-sort-year-desc">Year</a>
+		                |<a href="/allvehicles-sort-make-desc">Make</a>
+		                |<a href="/allvehicles-sort-model-desc">Model</a>
+		                |<a href="/allvehicles-sort-trim-desc">Trim</a>
+		                |<a href="/allvehicles-sort-price-desc"><span class="pickertext">Price</span><img width="20" height="24" alt="" src="assets/img/search/down.png"></a>
+					</div>
+					<div class="rowwrap_container">
+						<div class="rowwrap">
+							<div class="vehrow">
+								<header class="posttitle">
+									<h2><a href="#">USED 2016 NISSAN NVP S v8 3500</a></h2>
+								</header>
+								<div class="row">
+									<div class="col-sm-3">
+										<div class="photocolumn">
+											<img src="assets/img/photos/TN200x150/GN852117.jpg" />
+										</div>
+									</div>
+									<div class="col-sm-4 infocolumn">
+										<div class="details-left">
+											<ul>
+												<li>Engine: <span>8 Cylinder</span></li>
+												<li>Transmission: <span>AUTO</span></li>
+												<li>Exterior: <span>WHITE</span></li>
+												<li>Interior: <span>GRAY</span></li>
+												<li>Stock: <span>BL1419A</span></li>
+												<li>VIN: <span>5BZAF0AA6GN852117</span></li>
+											</ul>
+										</div>
+									</div>
+									<div class="col-sm-5 infocolumn">
+										<div class="details-right">
+											<p>Was Price: <span>$34,988</span></p>
+											<p>Dick Smith Price: <span>$33,995</span></p>
+											<div class="logos">
+												<div class="box"><img src="assets/img/department/sales/managerspecial.png"></div>
+												<div class="box"><img src="assets/img/department/sales/oneowner.png"></div>
+												<div class="box form-button form-button-img" id="5BZAF0AA6GN852117"><img src="assets/img/department/sales/pop-button.png"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-9 col-sm-offset-3 features">
+										<p>Features: <span>CD , 12 Passenger Seating</span></p>
+									</div>
+								</div>
+								<div class="greatdeals">
+									<a href="#" target="_blanl">
+										<img src="assets/img/greatdeal.png" />
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="rowwrap">
+							<div class="vehrow">
+								<header class="posttitle">
+									<h2><a href="#">USED 2016 NISSAN NVP S v8 3500</a></h2>
+								</header>
+								<div class="row">
+									<div class="col-sm-3">
+										<div class="photocolumn">
+											<img src="assets/img/photos/TN200x150/FH778800.jpg" />
+										</div>
+									</div>
+									<div class="col-sm-4 infocolumn">
+										<div class="details-left">
+											<ul>
+												<li>Engine: <span>8 Cylinder</span></li>
+												<li>Transmission: <span>AUTO</span></li>
+												<li>Exterior: <span>BLACK</span></li>
+												<li>Interior: <span>GRAY</span></li>
+												<li>Stock: <span>BL1778A</span></li>
+												<li>VIN: <span>2C3CDXCT6FH778800</span></li>
+											</ul>
+										</div>
+									</div>
+									<div class="col-sm-5 infocolumn">
+										<div class="details-right">
+											<p>Dick Smith Price: <span>$29,488</span></p>
+											<div class="logos">
+												<div class="box form-button form-button-img" id="5BZAF0AA6GN852117"><img src="assets/img/department/sales/pop-button.png"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-9 col-sm-offset-3 features">
+										<p>Features: <span>CD , 12 Passenger Seating</span></p>
+									</div>
+								</div>
+							</div>
+						</div>
+
+						<div class="rowwrap">
+							<div class="vehrow">
+								<header class="posttitle">
+									<h2><a href="#">USED 2016 NISSAN NVP S v8 3500 (dummy content)</a></h2>
+								</header>
+								<div class="row">
+									<div class="col-sm-3">
+										<div class="photocolumn">
+											<img src="assets/img/photos/TN200x150/GN852117.jpg" />
+										</div>
+									</div>
+									<div class="col-sm-4 infocolumn">
+										<div class="details-left">
+											<ul>
+												<li>Engine: <span>8 Cylinder</span></li>
+												<li>Transmission: <span>AUTO</span></li>
+												<li>Exterior: <span>WHITE</span></li>
+												<li>Interior: <span>GRAY</span></li>
+												<li>Stock: <span>BL1419A</span></li>
+												<li>VIN: <span>5BZAF0AA6GN852117</span></li>
+											</ul>
+										</div>
+									</div>
+									<div class="col-sm-5 infocolumn">
+										<div class="details-right">
+											<p>Was Price: <span>$34,988</span></p>
+											<p>Dick Smith Price: <span>$33,995</span></p>
+											<div class="logos">
+												<div class="box"><img src="assets/img/department/sales/managerspecial.png"></div>
+												<div class="box"><img src="assets/img/department/sales/oneowner.png"></div>
+												<div class="box form-button form-button-img" id="5BZAF0AA6GN852117"><img src="assets/img/department/sales/pop-button.png"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-9 col-sm-offset-3 features">
+										<p>Features: <span>CD , 12 Passenger Seating</span></p>
+									</div>
+								</div>
+								<div class="greatdeals">
+									<a href="#" target="_blanl">
+										<img src="assets/img/greatdeal.png" />
+									</a>
+								</div>
+							</div>
+						</div>
+
+						<div class="rowwrap">
+							<div class="vehrow">
+								<header class="posttitle">
+									<h2><a href="#">USED 2016 NISSAN NVP S v8 3500 (dummy content)</a></h2>
+								</header>
+								<div class="row">
+									<div class="col-sm-3">
+										<div class="photocolumn">
+											<img src="assets/img/photos/TN200x150/FH778800.jpg" />
+										</div>
+									</div>
+									<div class="col-sm-4 infocolumn">
+										<div class="details-left">
+											<ul>
+												<li>Engine: <span>8 Cylinder</span></li>
+												<li>Transmission: <span>AUTO</span></li>
+												<li>Exterior: <span>BLACK</span></li>
+												<li>Interior: <span>GRAY</span></li>
+												<li>Stock: <span>BL1778A</span></li>
+												<li>VIN: <span>2C3CDXCT6FH778800</span></li>
+											</ul>
+										</div>
+									</div>
+									<div class="col-sm-5 infocolumn">
+										<div class="details-right">
+											<p>Dick Smith Price: <span>$29,488</span></p>
+											<div class="logos">
+												<div class="box form-button form-button-img" id="5BZAF0AA6GN852117"><img src="assets/img/department/sales/pop-button.png"></div>
+											</div>
+										</div>
+									</div>
+								</div>
+								<div class="row">
+									<div class="col-sm-9 col-sm-offset-3 features">
+										<p>Features: <span>CD , 12 Passenger Seating</span></p>
+									</div>
+								</div>
+							</div>
+						</div>
+					</div>
 				</div>
 			</div>
 		</article> <!-- /#CONTENT-PRIMARY- -->
+
+		<div id="geo" class="container">
+			<div class="container-wrapper">
+				<div class="row">
+					<div class="col-md-4 geo-column column-left">
+						<div class="block">
+							<h3>Dick Smith Nissan of Columbia</h3>
+							<div class="box">
+								<p>9940 Two Notch Rd. Columbia,SC 29223</p>
+								<p><strong>Local:</strong>(803)256-6600</p>
+								<p><strong>Toll Free:</strong> (800)944-8570</p>
+							</div>
+							<div class="box">
+								<h5>Department Phone</h5>
+								<p><strong>Sales:</strong> (803) 256-6600</p>
+								<p><strong>Service:</strong> (803) 799-6327</p>
+								<p><strong>Parts:</strong> (803) 252-0040</p>
+								<p><strong>BodyShop:</strong></p>
+							</div>
+							<div class="box">
+								<h5>Department Hours</h5>
+								<p><strong>Sales:</strong> Mon - Sat 9:00am to 8:00pm</p>
+								<p><strong>Service:</strong> Mon-Fri 7:00am-6:00pm Sat 7:00am-5:00pm</p>
+								<p><strong>Parts:</strong> Mon-Fri 7:00am-6:00pm Sat 7:00am-5:00pm</p>
+								<p><strong>BodyShop:</strong></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8 geo-column column-right">
+						<div class="row">
+							<div class="col-md-6"><img src="assets/img/map.png"></div>
+							<div class="col-md-6"><img src="assets/img/map-route.png"></div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</div><!-- /#GEO- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
