--- a/columbianissan/sitemap.html
+++ b/columbianissan/sitemap.html
@@ -97,7 +97,208 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-sitemap" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="allinv-header">
+						<h1>Dick Smith Nissan Site Map</h1>
+						<div class="divider"></div>
+					</div>
+
+					<div class="allinv-block sitemap-block">
+						<div class="head">
+							<h2><a href="#">New Vehicles</a></h2>
+						</div>
+						<div class="sitemap-body">
+							<div class="box">
+								<h3>Cars</h3>
+								<ul>
+									<li><a href="/2016-nissan-370z">2016 Nissan 370Z</a></li>
+									<li><a href="/2017-nissan-370z">2017 Nissan 370Z</a></li>
+									<li><a href="/2016-nissan-370z_roadster">2016 Nissan 370Z Roadster</a></li>
+									<li><a href="/2016-nissan-altima">2016 Nissan Altima</a></li>
+									<li><a href="/2016-nissan-leaf">2016 Nissan Leaf</a></li>
+									<li><a href="/2016-nissan-maxima">2016 Nissan Maxima</a></li>
+									<li><a href="/2017-nissan-maxima">2017 Nissan Maxima</a></li>
+									<li><a href="/2016-nissan-sentra">2016 Nissan Sentra</a></li>
+									<li><a href="/2016-nissan-versa">2016 Nissan Versa</a></li>
+									<li><a href="/2017-nissan-versa">2017 Nissan Versa</a></li>
+									<li><a href="/2016-nissan-versa_note">2016 Nissan Versa Note</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Crossover</h3>
+								<ul>
+			                        <li><a href="/2016-nissan-juke">2016 Nissan Juke</a></li>
+			                        <li><a href="/2016-nissan-murano">2016 Nissan Murano</a></li>
+			                        <li><a href="/2016-nissan-pathfinder">2016 Nissan Pathfinder</a></li>
+			                        <li><a href="/2017-nissan-pathfinder">2017 Nissan Pathfinder</a></li>
+			                        <li><a href="/2016-nissan-rogue">2016 Nissan Rogue</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>SUV</h3>
+								<ul>
+									<li><a href="/2017-nissan-armada">2017 Nissan Armada</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Truck</h3>
+								<ul>
+									<li><a href="/2016-nissan-frontier">2016 Nissan Frontier</a></li>
+									<li><a href="/2017-nissan-titan">2017 Nissan Titan</a></li>
+									<li><a href="/2016-nissan-titan_xd">2016 Nissan Titan XD</a></li>
+									<li><a href="/2017-nissan-titan_xd">2017 Nissan Titan XD</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Van/Minivan</h3>
+								<ul>
+			                        <li><a href="/2016-nissan-nv200">2016 Nissan NV200</a></li>
+			                        <li><a href="/2016-nissan-nv2500">2016 Nissan NV2500</a></li>
+			                        <li><a href="/2016-nissan-nv3500">2016 Nissan NV3500</a></li>
+			                        <li><a href="/2016-nissan-nvp">2016 Nissan NVP</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="divider"></div>
+
+					<div class="allinv-block sitemap-block">
+						<div class="head">
+							<h2><a href="#">Used Vehicles</a></h2>
+						</div>
+						<div class="sitemap-body">
+							<div class="box">
+								<h3>Cars</h3>
+								<ul>
+									<li><a href="/2013-bmw-328i">2013 BMW 328I</a></li>
+									<li><a href="/2012-chevrolet-cruze">2012 CHEVROLET CRUZE</a></li>
+									<li><a href="/2006-chrysler-300c">2006 CHRYSLER 300C</a></li>
+									<li><a href="/2014-dodge-challenger">2014 DODGE CHALLENGER</a></li>
+									<li><a href="/2015-dodge-charger">2015 DODGE CHARGER</a></li>
+									<li><a href="/2013-ford-fusion">2013 FORD FUSION</a></li>
+									<li><a href="/2015-ford-fusion">2015 FORD FUSION</a></li>
+									<li><a href="/2015-honda-accord">2015 HONDA ACCORD</a></li>
+									<li><a href="/2015-hyundai-elantra">2015 HYUNDAI ELANTRA</a></li>
+									<li><a href="/2013-hyundai-sonata">2013 HYUNDAI SONATA</a></li>
+									<li><a href="/2013-infiniti-g37">2013 INFINITI G37</a></li>
+									<li><a href="/2013-infiniti-g37_coupe">2013 INFINITI G37 Coupe</a></li>
+									<li><a href="/2013-infiniti-m37">2013 INFINITI M37</a></li>
+									<li><a href="/2015-kia-optima">2015 KIA OPTIMA</a></li>
+									<li><a href="/2011-mercedes~benz-slk350">2011 MERCEDES-BENZ SLK350</a></li>
+									<li><a href="/2010-nissan-altima">2010 NISSAN ALTIMA</a></li>
+									<li><a href="/2013-nissan-altima">2013 NISSAN ALTIMA</a></li>
+									<li><a href="/2014-nissan-altima">2014 NISSAN ALTIMA</a></li>
+									<li><a href="/2015-nissan-altima">2015 NISSAN ALTIMA</a></li>
+									<li><a href="/2016-nissan-altima">2016 NISSAN ALTIMA</a></li>
+									<li><a href="/2013-nissan-maxima">2013 NISSAN MAXIMA</a></li>
+									<li><a href="/2014-nissan-maxima">2014 NISSAN MAXIMA</a></li>
+									<li><a href="/2016-nissan-maxima">2016 NISSAN MAXIMA</a></li>
+									<li><a href="/2013-nissan-sentra">2013 NISSAN SENTRA</a></li>
+									<li><a href="/2015-nissan-sentra">2015 NISSAN SENTRA</a></li>
+									<li><a href="/2015-nissan-versa">2015 NISSAN VERSA</a></li>
+									<li><a href="/2016-nissan-versa">2016 NISSAN VERSA</a></li>
+									<li><a href="/2008-smart-fortwo">2008 SMART FORTWO</a></li>
+									<li><a href="/2005-toyota-camry">2005 TOYOTA CAMRY</a></li>
+									<li><a href="/2013-toyota-camry">2013 TOYOTA CAMRY</a></li>
+									<li><a href="/2013-toyota-corolla">2013 TOYOTA COROLLA</a></li>
+									<li><a href="/2014-toyota-prius">2014 TOYOTA PRIUS</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Crossover</h3>
+								<ul>
+									<li><a href="/2010-chevrolet-hhr">2010 CHEVROLET HHR</a></li>
+									<li><a href="/2014-dodge-journey">2014 DODGE JOURNEY</a></li>
+									<li><a href="/2011-honda-cr~v">2011 HONDA CR-V</a></li>
+									<li><a href="/2014-mazda-cx~5">2014 MAZDA CX-5</a></li>
+									<li><a href="/2012-nissan-juke">2012 NISSAN JUKE</a></li>
+									<li><a href="/2015-nissan-juke">2015 NISSAN JUKE</a></li>
+									<li><a href="/2013-nissan-murano">2013 NISSAN MURANO</a></li>
+									<li><a href="/2016-nissan-murano">2016 NISSAN MURANO</a></li>
+									<li><a href="/2015-nissan-pathfinder">2015 NISSAN PATHFINDER</a></li>
+									<li><a href="/2012-nissan-rogue">2012 NISSAN ROGUE</a></li>
+									<li><a href="/2013-nissan-rogue">2013 NISSAN ROGUE</a></li>
+									<li><a href="/2014-nissan-rogue">2014 NISSAN ROGUE</a></li>
+									<li><a href="/2015-nissan-rogue">2015 NISSAN ROGUE</a></li>
+									<li><a href="/2016-nissan-rogue">2016 NISSAN ROGUE</a></li>
+									<li><a href="/2015-toyota-rav4">2015 TOYOTA RAV4</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>SUV</h3>
+								<ul>
+									<li><a href="/2005-bmw-x5">2005 BMW X5</a></li>
+									<li><a href="/2013-ford-escape">2013 FORD ESCAPE</a></li>
+									<li><a href="/2015-nissan-pathfinder">2015 NISSAN PATHFINDER</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Truck</h3>
+								<ul>
+			                        <li><a href="/2015-dodge-ram_1500_quad_cab">2015 DODGE RAM 1500 Quad Cab</a></li>
+			                        <li><a href="/2015-dodge-ram_3500_crew_cab">2015 DODGE RAM 3500 Crew Cab</a></li>
+			                        <li><a href="/2015-nissan-frontier">2015 NISSAN FRONTIER</a></li>
+			                        <li><a href="/2008-nissan-frontier_crewcab">2008 NISSAN FRONTIER CREWCAB</a></li>
+			                        <li><a href="/2012-nissan-frontier_crewcab">2012 NISSAN FRONTIER CREWCAB</a></li>
+			                        <li><a href="/2015-nissan-frontier_crewcab">2015 NISSAN FRONTIER CREWCAB</a></li>
+			                        <li><a href="/2016-nissan-frontier_crewcab">2016 NISSAN FRONTIER CREWCAB</a></li>
+			                        <li><a href="/2009-toyota-tacoma_doublecab">2009 TOYOTA TACOMA DoubleCab</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Van/Minivan</h3>
+								<ul>
+									<li><a href="/2015-nissan-nv200">2015 NISSAN NV200</a></li>
+									<li><a href="/2016-nissan-nvp">2016 NISSAN NVP</a></li>
+								</ul>
+							</div>
+						</div>
+					</div>
+
+					<div class="divider"></div>
+
+					<div class="allinv-block sitemap-block">
+						<div class="head">
+							<h2><span>Departments</span></h2>
+						</div>
+						<div class="sitemap-body">
+							<div class="box">
+								<h3>Vehicle Sales</h3>
+								<ul>
+				                    <li><a href="/new-cars">New Nissan Vehicle Sales</a></li>
+				                    <li><a href="/used-cars-trucks">Pre-owned Vehicle Sales</a></li>
+				                    <li><a href="/commercial-vehicles">Commercial Nissan Vehicle Sales</a></li>
+				                    <li><a href="/vin-stock-search">Search By Vin or Stock</a></li>
+				                    <li><a href="/car-price-quote">Get A Quote on a vehicle</a></li>
+				                    <li><a href="/buy-my-used-car">Sell or Trade you vehicle</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Service Department</h3>
+								<ul>
+				                    <li><a href="/car-service">Service Department Information</a></li>
+				                    <li><a href="/email-service-department">Email Service Department</a></li>
+				                    <li><a href="/service-appointment">Make Service Appointment</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Parts Department</h3>
+								<ul>
+				                    <li><a href="/car-truck-parts">Part Department Information</a></li>
+				                    <li><a href="/email-parts-department">Email Parts Department</a></li>
+								</ul>
+							</div>
+							<div class="box">
+								<h3>Paint and Body Shop</h3>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
