--- a/columbianissan/vehicle-detail.html
+++ b/columbianissan/vehicle-detail.html
@@ -97,7 +97,158 @@
 		</header> <!-- /#HEADER-PRIMARY -->
 
 		<!-- #CONTENT-PRIMARY -->
-		<article id="content-primary-"></article> <!-- /#CONTENT-PRIMARY- -->
+		<article id="content-primary-details" class="content-primary">
+			<div class="container">
+				<div class="container-wrapper">
+					<div class="vd-header">
+						<h1>2014 TOYOTA PRIUS</h1>
+					</div>
+					<div class="details-info">
+						<div class="row">
+							<div class="col-md-7">
+								<div class="img-gallery">
+									<img src="assets/img/dummy-01.jpg" />
+								</div>
+								<div class="options box">
+									<ul>
+										<li><a href="#"><i aria-hidden="true" class="fa fa-print"></i> <span class="option-text">Print</span></a></li>
+										<li><a href="#"><i aria-hidden="true" class="fa fa-paperclip"></i> <span class="option-text">CarFax</span></a></li>
+										<li><a href="#"><i aria-hidden="true" class="fa fa-list"></i> <span class="option-text">Compare Vehicles</span></a></li>
+										<li><a href="#"><i aria-hidden="true" class="fa fa-book"></i> <span class="option-text">Value Your Trade</span></a></li>
+									</ul>
+								</div>
+
+								<div class="row">
+									<div class="col-md-7">
+										<div class="box">
+											<h2>Vehicle Details</h2>
+											<ul>
+												<li><strong>Stock:</strong> <span><strong>BL1306A</strong></span></li>
+												<li><strong>VIN:</strong> <span>JTDKN3DU4E1780675</span></li>
+												<li><strong>Year:</strong> <span>2014</span></li>
+												<li><strong>Make:</strong> <span>TOYOTA</span></li>
+												<li><strong>Model:</strong> <span>PRIUS</span></li>
+												<li><strong>Trim:</strong> <span></span></li>
+												<li><strong>Ext-Color:</strong> <span>WHITE</span></li>
+												<li><strong>Int-Color:</strong> <span>GRAY</span></li>
+												<li><strong>Cylinders:</strong> <span>4</span></li>
+												<li><strong>Drive:</strong> <span>2WD</span></li>
+												<li><strong>Trans:</strong> <span>AUTO</span></li>
+												<li><strong>Size:</strong> <span>HATCH</span></li>
+												<li><strong>Mileage:</strong> <span>44927</span></li>
+												<li>&nbsp;</li>
+												<li><a href="#"><img src="assets/img/department/sales/oneowner.png" /></a></li>
+											</ul>
+										</div>
+									</div>
+
+									<div class="col-md-5">
+										<div class="box">
+											<h2>Price</h2>
+											<ul>
+												<li>Price or Best Offer</li>
+												<li class="price">$15,995</li>
+											</ul>
+										</div>
+										<div class="box">
+											<h2>Vehicle Features</h2>
+											<ul>
+												<li>CD</li>
+												<li>Vehicle Options</li>
+												<li>- Air Conditioning</li>
+												<li>- Power Steering</li>
+												<li>- Power Windows</li>
+												<li>- Power Door Locks</li>
+												<li>- Tilt Steering</li>
+												<li>- Cruise Control</li>
+												<li>- AM/FM Stereo</li>
+												<li>- Dual Front Airbags</li>
+											</ul>
+										</div>
+									</div>
+								</div>
+							</div>
+
+							<div class="col-md-5">
+								<div class="cta-img">
+									<a href="#"><img src="assets/img/department/sales/testdrive.png"></a>
+								</div>
+								<div class="box inquire">
+									<div class="head">
+										<h2>Inquire About Vehicle</h2>
+										<h4>(800)944-8570</h4>
+									</div>
+									<p>Hello, my name is <input type="text" required="" title="First Name" placeholder="First Name" class="first-name" name="first-name" id="fname" aria-required="true"> <input type="text" required="" title="Last Name" placeholder="Last Name" class="last-name" name="last-name" id="lname" aria-required="true"> and I'm interested in your <span class="car-name">2014 TOYOTA PRIUS </span>. My ZIP code is <input type="text" title="Zip Code" maxlength="5" placeholder="ZIP" pattern="[0-9]{5}" class="area-code" name="area-code" id="zip"> You may contact me by email at <input type="text" title="Email Address" placeholder="Email Address" class="email-add" name="email-add" id="email"> or phone at <input type="text" placeholder="(___) ___-_____" pattern="[0-9,()-]" class="phone" name="phone" id="phone" maxlength="14" autocomplete="off"></p>
+									<p>Thank you!</p>
+									<textarea maxlength="500" placeholder="Add Comment(s) Here" class="comment-area" name="comment-area" id="comment"></textarea>
+									<div class="captcha-holder">
+										<img alt="" src="assets/img/captcha.png">
+									</div>
+									<input type="submit" class="btn-submit" value="Send Message" name="">
+								</div>
+								<div class="box similar-vehicles">
+									<h2 class="with-underline">Similar Vehicles</h2>
+									<ul>
+										<li><a href="#"><img src="assets/img/photos/tn200x150/GL365376.jpg"> NEW 2016 NISSAN VERSA NOTE SV</a></li>
+										<li><a href="#"><img src="assets/img/photos/tn200x150/GC300368.jpg"> NEW 2016 NISSAN LEAF S</a></li>
+										<li><a href="#"><img src="assets/img/photos/tn200x150/E1780675.jpg"> USED 2014 TOYOTA PRIUS</a></li>
+										<li><a href="#"><img src="assets/img/photos/tn200x150/GL381557.jpg"> NEW 2016 NISSAN VERSA NOTE S PLUS</a></li>
+										<li><a href="#"><img src="assets/img/photos/tn200x150/GL387018.jpg"> NEW 2016 NISSAN VERSA NOTE SV</a></li>
+									</ul>
+								</div>
+								<div class="box social-panel">
+									<ul>
+										<li>
+					                        <span displaytext="Facebook" class="st_facebook_large" st_processed="yes"><span style="text-decoration:none;color:#000000;display:inline-block;cursor:pointer;" class="stButton"><span class="stLarge" style="background-image: url(&quot;https://ws.sharethis.com/images/facebook_32.png&quot;);"></span></span></span>
+					                        <span displaytext="Tweet" class="st_twitter_large" st_processed="yes"><span style="text-decoration:none;color:#000000;display:inline-block;cursor:pointer;" class="stButton"><span class="stLarge" style="background-image: url(&quot;https://ws.sharethis.com/images/twitter_32.png&quot;);"></span></span></span>
+					                        <span displaytext="Google +" class="st_googleplus_large" st_processed="yes"><span style="text-decoration:none;color:#000000;display:inline-block;cursor:pointer;" class="stButton"><span class="stLarge" style="background-image: url(&quot;https://ws.sharethis.com/images/googleplus_32.png&quot;);"></span></span></span>
+					                        <span displaytext="Email" class="st_email_large" st_processed="yes"><span style="text-decoration:none;color:#000000;display:inline-block;cursor:pointer;" class="stButton"><span class="stLarge" style="background-image: url(&quot;https://ws.sharethis.com/images/email_32.png&quot;);"></span></span></span>
+										</li>
+									</ul>
+								</div>
+							</div>
+						</div>
+					</div>
+				</div>
+			</div>
+		</article> <!-- /#CONTENT-PRIMARY- -->
+
+		<div id="geo" class="container">
+			<div class="container-wrapper">
+				<div class="row">
+					<div class="col-md-4 geo-column column-left">
+						<div class="block">
+							<h3>Dick Smith Nissan of Columbia</h3>
+							<div class="box">
+								<p>9940 Two Notch Rd. Columbia,SC 29223</p>
+								<p><strong>Local:</strong>(803)256-6600</p>
+								<p><strong>Toll Free:</strong> (800)944-8570</p>
+							</div>
+							<div class="box">
+								<h5>Department Phone</h5>
+								<p><strong>Sales:</strong> (803) 256-6600</p>
+								<p><strong>Service:</strong> (803) 799-6327</p>
+								<p><strong>Parts:</strong> (803) 252-0040</p>
+								<p><strong>BodyShop:</strong></p>
+							</div>
+							<div class="box">
+								<h5>Department Hours</h5>
+								<p><strong>Sales:</strong> Mon - Sat 9:00am to 8:00pm</p>
+								<p><strong>Service:</strong> Mon-Fri 7:00am-6:00pm Sat 7:00am-5:00pm</p>
+								<p><strong>Parts:</strong> Mon-Fri 7:00am-6:00pm Sat 7:00am-5:00pm</p>
+								<p><strong>BodyShop:</strong></p>
+							</div>
+						</div>
+					</div>
+					<div class="col-md-8 geo-column column-right">
+						<div class="row">
+							<div class="col-md-6"><img src="assets/img/map.png"></div>
+							<div class="col-md-6"><img src="assets/img/map-route.png"></div>
+						</div>
+					</div>
+				</div>
+			</div><!-- /#GEO- -->
+		</div>
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
