--- a/columbianissan/buy-my-used-car-application.html
+++ b/columbianissan/buy-my-used-car-application.html
@@ -52,7 +52,7 @@
 		
 		<!-- #HEADER-PRIMARY -->
 		<header id="header-primary">
-			<div class="wrapper-content clearfix">
+			<div class="container clearfix">
 				
 				<!-- #HEADER-LOGO -->
 				<div id="header-logo" class="clearfix">
@@ -250,7 +250,7 @@ then bring in your vehicle for an appraisal.</h3>
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
-			<div class="wrapper-content clearfix">
+			<div class="container clearfix">
 				
 				<!-- #FOOTER-NAV-LINKS -->
 				<div id="footer-nav-links">
