--- a/columbianissan/index.html
+++ b/columbianissan/index.html
@@ -49,7 +49,7 @@
 
 		<!-- #HEADER-PRIMARY -->
 		<header id="header-primary">
-			<div class="wrapper-header clearfix">
+			<div class="container clearfix">
 				
 				<!-- #HEADER-LOGO -->
 				<div id="header-logo" class="col-md-9">
@@ -147,7 +147,7 @@
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
-			<div class="wrapper-footer">
+			<div class="container">
 				
 				<!-- #FOOTER-NAV-LINKS -->
 				<div id="footer-nav-links">
