--- a/columbianissan/vin-stock-search.html
+++ b/columbianissan/vin-stock-search.html
@@ -49,7 +49,7 @@
 		
 		<!-- #HEADER-PRIMARY -->
 		<header id="header-primary">
-			<div class="wrapper-content clearfix">
+			<div class="container clearfix">
 				
 				<!-- #HEADER-LOGO -->
 				<div id="header-logo" class="clearfix">
@@ -139,7 +139,7 @@
 
 		<!-- #FOOTER-PRIMARY -->
 		<footer id="footer-primary">
-			<div class="wrapper-content clearfix">
+			<div class="container clearfix">
 				
 				<!-- #FOOTER-NAV-LINKS -->
 				<div id="footer-nav-links">
